@@ -4,6 +4,11 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Wed Thu 03 17:12 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Debugged minix filesystem, so that removing files now
+	  works correctly, and the filesystem no longer gets corrupted.
+
 Wed Nov 19 18:22 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Added Riley Williams changes to bootsect.S to fix a bug and tidy
